Fundamentals-and-Workload-Deployment/demos/globomantics-troubleshooting-labs/scenario-1-image-pull-error/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: globomantics-website
  namespace: globomantics-image-pull
spec:
  selector:
    app: globomantics-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: web
