Fundamentals-and-Workload-Deployment/demos/globomantics-troubleshooting-labs/scenario-1-image-pull-error/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: globomantics-website
  namespace: globomantics-image-pull
spec:
  to:
    kind: Service
    name: globomantics-website
  port:
    targetPort: web
